# watchhound

./: .gitignore  Cargo.toml  README.md  demo.ps1  example_usage.md  file1.txt  file2.txt  file3.txt  test_file.txt  test_fix.ps1  test_multiple_files.ps1
.cursor/rules/: rust-pre-commit.mdc
.github/workflows/: ci.yml
src/: main.rs
